--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -81,7 +81,7 @@
     --logo-gradient-start-color: var(--color-purple);
     --logo-gradient-end-color: #321873;
 
-    --color-brand-pastel-dark: #BCB3D3;
+    --color-brand-pastel-dark: #bcb3d3;
 
     --size-xxxLarge: 56px;
     --size-xxLarge: 48px;
