--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -169,50 +169,6 @@
     font-weight: 400;
 }
 
-.pillButton {
-    align-items: center;
-    background: var(--color-gray-300);
-    border: 0;
-    border-radius: var(--size-xSmall);
-    column-gap: var(--size-xxSmall);
-    display: flex;
-    font-size: 12px;
-    height: 30px !important;
-    justify-content: center;
-    margin-right: var(--size-xSmall);
-    min-width: 86px;
-    padding: var(--size-xxSmall) var(--size-small);
-    transition: background 0.1s ease-in-out;
-}
-
-.pillLoading {
-    background: var(--color-brand-pastel-dark);
-    border: 1px solid var(--color-text-primary);
-    color: var(--color-text-primary);
-}
-
-.pillLive {
-    background: var(--color-green-100);
-    border: 1px solid var(--color-green-600);
-    color: var(--color-green-900);
-}
-
-.pillStatic {
-    background: var(--color-blue-100);
-    border: 1px solid var(--color-blue-600);
-    color: var(--color-blue-900);
-}
-
-.pillButtonText {
-    align-items: center;
-    column-gap: var(--size-xxSmall);
-    display: flex;
-    justify-content: center;
-    opacity: 0;
-    position: absolute;
-    transition: opacity 0.1s ease-in-out;
-}
-
-.pillButtonTextVisible {
-    opacity: 1;
+.blurChart {
+    filter: blur(2px);
 }
