add dashboard chart basic loading indicator (#2769)
only show chart loading skeleton on initial load.
subsequent updates show a small loading indicator until data is updated without blocking old data.
loading indicator reflects whether an absolute or a 'live' range is shown.
https://www.loom.com/share/2ceb6b4d46174640a564e984a7baeece

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -81,6 +81,8 @@
     --logo-gradient-start-color: var(--color-purple);
     --logo-gradient-end-color: #321873;
 
+    --color-brand-pastel-dark: #bcb3d3;
+
     --size-xxxLarge: 56px;
     --size-xxLarge: 48px;
     --size-xLarge: 32px;
