--- a/frontend/src/components/Dropdown/StandardDropdown/StandardDropdown.module.scss
+++ b/frontend/src/components/Dropdown/StandardDropdown/StandardDropdown.module.scss
@@ -61,6 +61,11 @@
     height: 40px;
     justify-content: center;
     padding: 10px 10px 10px 6px;
+
+    &.dropdownGray {
+        background: var(--color-gray-200) !important;
+        border: 1px solid transparent !important;
+    }
 }
 
 .overlay {
