--- a/frontend/src/components/Select/SearchSelect/SearchSelect.module.scss
+++ b/frontend/src/components/Select/SearchSelect/SearchSelect.module.scss
@@ -5,8 +5,8 @@
 
     :global {
         .ant-select-selection-search {
-            display: flex;
             align-items: center;
+            display: flex;
         }
         .ant-select-selector {
             border: 1px solid var(--color-gray-300) !important;
@@ -15,15 +15,6 @@
             font-size: 16px;
             height: 40px !important;
             padding: var(--size-xSmall) var(--size-medium) !important;
-        }
-
-        .ant-select-selector:hover, .ant-select-open {
-            background: var(--color-gray-300) !important;
-
-            .ant-select-selector {
-                background-color: var(--color-gray-300) !important;
-                border-radius: var(--border-radius) !important;
-            }
         }
 
         .ant-select-selection-placeholder {
@@ -40,25 +31,34 @@
             display: none;
         }
 
-        .ant-select-arrow {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            height: 18px;
-            width: 100%;
-
-            > svg {
-                color: var(--text-primary);
-                height: 100%;
-                position: relative;
-                right: -10px;
-                top: -3px;
-                width: 100%;
-            }
+        .ant-select-selector {
+            background-color: var(--color-gray-300) !important;
         }
+    }
+
+    :global(.ant-select-arrow) {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        height: 18px;
+        width: 100%;
+
+        > svg {
+            color: var(--text-primary);
+            height: 100%;
+            position: relative;
+            right: -10px;
+            top: -3px;
+            width: 100%;
+        }
+    }
+
+    :global(.ant-select-selector:hover, .ant-select-open) {
+        background: var(--color-gray-300) !important;
 
         .ant-select-selector {
             background-color: var(--color-gray-300) !important;
+            border-radius: var(--border-radius) !important;
         }
     }
 }
