--- a/frontend/src/pages/Dashboards/components/EditMetricModal/EditMetricModal.module.scss
+++ b/frontend/src/pages/Dashboards/components/EditMetricModal/EditMetricModal.module.scss
@@ -66,7 +66,7 @@
 .filtersRow {
     display: grid;
     grid-gap: var(--size-medium);
-    grid-template-columns: 16fr 13fr 50px;
+    grid-template-columns: 11fr 5fr 14fr 50px;
     width: 100%;
 }
 
