[HIG-2452] implement new edit metric modal UI (#2775)
New Edit Metric Modal UI
![image](https://user-images.githubusercontent.com/1351531/179864771-4a2a21fc-5525-4e2f-a028-956d86b4c1bb.png)
![image](https://user-images.githubusercontent.com/1351531/179864793-bcccb475-cf2f-400b-a24d-2f262bcabb6e.png)

Adds ability to filter metrics graphed via `contains` matching.
![image](https://user-images.githubusercontent.com/1351531/179864845-8c8ccf8f-4519-4682-ba69-b0fcf0b88476.png)

--- a/frontend/src/components/Dropdown/StandardDropdown/StandardDropdown.module.scss
+++ b/frontend/src/components/Dropdown/StandardDropdown/StandardDropdown.module.scss
@@ -61,8 +61,17 @@
     height: 40px;
     justify-content: center;
     padding: 10px 10px 10px 6px;
+
+    &.dropdownGray {
+        background: var(--color-gray-200) !important;
+        border: 1px solid transparent !important;
+    }
 }
 
 .overlay {
     z-index: 9999999999 !important;
+}
+
+.placeholder {
+    color: var(--color-gray-400) !important;
 }
