--- a/frontend/src/pages/Dashboards/components/CreateDashboardModal/CreateDashboardModal.module.scss
+++ b/frontend/src/pages/Dashboards/components/CreateDashboardModal/CreateDashboardModal.module.scss
@@ -21,3 +21,29 @@
     flex-grow: 1;
     margin-left: var(--size-medium);
 }
+
+.submitRow {
+    column-gap: var(--size-medium);
+    display: flex;
+    justify-content: flex-end;
+    margin-top: var(--size-large);
+    width: 100%;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 0 !important;
+    padding-top: var(--size-medium);
+    row-gap: var(--size-medium);
+
+    &:first-of-type {
+        padding-top: 0;
+    }
+
+    h3 {
+        font-size: 16px;
+        margin-bottom: 0 !important;
+        margin-top: 0 !important;
+    }
+}
