--- a/frontend/src/pages/Alerts/components/AlertLastEditedBy/AlertLastEditedBy.module.scss
+++ b/frontend/src/pages/Alerts/components/AlertLastEditedBy/AlertLastEditedBy.module.scss
@@ -2,6 +2,7 @@
     align-items: center;
     column-gap: var(--size-xSmall);
     display: flex;
+    margin-top: var(--size-xSmall);
 
     .adminContainer {
         color: var(--color-gray-500);
