added inner chart wrapper

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -110,8 +110,12 @@
     padding: 0 16px;
 }
 
+.chartInner {
+    padding: 0 10px 16px 16px;
+}
+
 .chartWrapper {
-    padding: 0 0 10px;
+    padding: 0;
 }
 
 .createNewAlertRow {
