--- a/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
+++ b/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
@@ -42,6 +42,7 @@
 }
 
 .dashboardPageFixedHeader {
+    background-color: var(--color-white);
     border-bottom: var(--color-gray-300) 1px solid;
     display: flex;
     flex-direction: column;
