--- a/frontend/src/components/Header/components/PersonalNotificationButton/PersonalNotificationButton.module.scss
+++ b/frontend/src/components/Header/components/PersonalNotificationButton/PersonalNotificationButton.module.scss
@@ -1,11 +1,11 @@
-.personalNotificationButton {
+a.personalNotificationButton {
     align-items: center;
     border: 0;
     border-radius: var(--size-xSmall);
     column-gap: var(--size-xSmall);
     display: flex;
     height: 32px;
-    padding-bottom: var(--size-xxSmall);
+    padding-bottom: var(--size-xxSmall) !important;
     padding-top: var(--size-xxSmall) !important;
     width: fit-content;
 
