--- a/frontend/src/pages/Alerts/Alerts.module.scss
+++ b/frontend/src/pages/Alerts/Alerts.module.scss
@@ -35,6 +35,10 @@
     .primary {
         font-size: 16px;
         font-weight: 500;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 500px;
     }
 }
 
