--- a/frontend/src/components/LineChart/LineChart.module.scss
+++ b/frontend/src/components/LineChart/LineChart.module.scss
@@ -55,6 +55,13 @@
     width: 100%;
 }
 
+.tooltipGrid {
+    display: grid;
+    grid-column-gap: var(--size-xSmall);
+    grid-template-columns: 1fr 10px 64px 10px;
+    width: 100%;
+}
+
 .scoreIcon {
     --size: var(--size-small);
     align-items: center;
