--- a/frontend/src/pages/Billing/Billing.module.scss
+++ b/frontend/src/pages/Billing/Billing.module.scss
@@ -82,6 +82,42 @@
     }
 }
 
+.unlimitedMembersCard {
+    background-color: var(--color-blue-300);
+    font-size: 16px;
+    margin-bottom: var(--size-large);
+    margin-top: var(--size-large);
+    max-width: 700px;
+    padding: var(--size-large);
+}
+
+.unlimitedMembersIcon {
+    color: var(--color-blue-500);
+    padding-top: 4px;
+}
+
+.unlimitedMembersHeader {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.unlimitedMembersContainer {
+    display: grid;
+    grid-template-columns: 48px 1fr;
+}
+
+.unlimitedMembersButton {
+    background-color: var(--color-blue-400) !important;
+    border: var(--color-blue-400) !important;
+    color: var(--color-white) !important;
+    margin: 16px 0 0;
+
+    &:focus &:hover {
+        background-color: var(--color-blue-600) !important;
+        border: var(--color-blue-600) !important;
+    }
+}
+
 .titleContainer {
     align-items: flex-start;
     display: flex;
@@ -127,4 +163,18 @@
 
 .billingIssues {
     font-size: 18px;
+}
+
+.workspaceTabs {
+    > :global(.ant-tabs-nav)::before {
+        border-bottom: 0 !important;
+    }
+
+    :global(.ant-tabs-tab):first-of-type {
+        margin-left: 0 !important;
+    }
+}
+
+.header {
+    margin-bottom: 20px !important;
 }
