--- a/frontend/src/pages/Billing/Billing.module.scss
+++ b/frontend/src/pages/Billing/Billing.module.scss
@@ -83,7 +83,7 @@
 }
 
 .unlimitedMembersCard {
-    background-color: var(--color-blue-300);
+    background-color: var(--color-blue-200);
     font-size: 16px;
     margin-bottom: var(--size-large);
     margin-top: var(--size-large);
@@ -92,7 +92,7 @@
 }
 
 .unlimitedMembersIcon {
-    color: var(--color-blue-500);
+    color: var(--color-blue-700);
     padding-top: 4px;
 }
 
@@ -107,15 +107,7 @@
 }
 
 .unlimitedMembersButton {
-    background-color: var(--color-blue-400) !important;
-    border: var(--color-blue-400) !important;
-    color: var(--color-white) !important;
-    margin: 16px 0 0;
-
-    &:focus &:hover {
-        background-color: var(--color-blue-600) !important;
-        border: var(--color-blue-600) !important;
-    }
+    margin-top: var(--size-medium);
 }
 
 .titleContainer {
@@ -140,7 +132,8 @@
 .annualToggleBox {
     border: 1px solid var(--color-gray-300);
     border-radius: 8px;
-    margin-bottom: 30px;
+    margin-bottom: var(--size-large);
+    margin-top: var(--size-large);
     max-width: 350px;
     padding: 30px;
 }
