trash can color

--- a/frontend/src/pages/Dashboards/components/EditMetricModal/EditMetricModal.module.scss
+++ b/frontend/src/pages/Dashboards/components/EditMetricModal/EditMetricModal.module.scss
@@ -87,5 +87,13 @@
     &[disabled] {
         background-color: var(--color-red-300) !important;
         border: var(--color-red-400);
+
+        &:hover {
+            background-color: var(--color-red-300) !important;
+        }
+    }
+
+    &:hover {
+        background-color: var(--color-red-600) !important;
     }
 }
