--- a/frontend/src/pages/Dashboards/components/EditMetricModal/EditMetricModal.module.scss
+++ b/frontend/src/pages/Dashboards/components/EditMetricModal/EditMetricModal.module.scss
@@ -37,8 +37,8 @@
 
 .typesContainer {
     display: grid;
-    grid-gap: var(--size-large);
-    grid-template-columns: 1fr 1fr;
+    grid-gap: var(--size-medium);
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .metricViewDetails {
@@ -70,6 +70,13 @@
     width: 100%;
 }
 
+.groupsRow {
+    display: grid;
+    grid-gap: var(--size-medium);
+    grid-template-columns: 1fr 50px;
+    width: 100%;
+}
+
 .removeTagFilterButton {
     background-color: var(--color-red-700);
     border: var(--color-red-900);
@@ -80,5 +87,13 @@
     &[disabled] {
         background-color: var(--color-red-300) !important;
         border: var(--color-red-400);
+
+        &:hover {
+            background-color: var(--color-red-300) !important;
+        }
+    }
+
+    &:hover {
+        background-color: var(--color-red-600) !important;
     }
 }
