update enterprise price

--- a/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
+++ b/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
@@ -89,3 +89,10 @@
         transform: scale(0.95);
     }
 }
+
+.enterpriseRow {
+    align-items: center;
+    column-gap: 8px;
+    display: flex;
+    height: 44px;
+}
