remove per-member billing for startup and enterprise tier (#2756)
stop billing per seat for all pricing tiers. makes the new unlimited pricing tiers the default.
removes unused functions from billing.go.

all paid tiers now include unlimited workspace members
* Basic (previously free) tier: free
* Essentials (previously basic) tier: now $150 monthly ($120 per month if billed annually).
* Startup tier: now $400 monthly ($320 per month if billed annually).
* Enterprise tier: now $1500 monthly ($1200 per month if billed annually).

adds ability to redirect from `/w/upgrade-plan` to the default workspace url

--- a/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
+++ b/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
@@ -22,7 +22,7 @@
 }
 
 .extraMembersCost {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .extraMembersBreakdown {
@@ -88,4 +88,11 @@
     100% {
         transform: scale(0.95);
     }
+}
+
+.enterpriseRow {
+    align-items: center;
+    column-gap: 8px;
+    display: flex;
+    height: 44px;
 }
