--- a/frontend/src/pages/Billing/Billing.module.scss
+++ b/frontend/src/pages/Billing/Billing.module.scss
@@ -82,6 +82,34 @@
     }
 }
 
+.unlimitedMembersCard {
+    background-color: var(--color-blue-200);
+    font-size: 16px;
+    margin-bottom: var(--size-large);
+    margin-top: var(--size-large);
+    max-width: 700px;
+    padding: var(--size-large);
+}
+
+.unlimitedMembersIcon {
+    color: var(--color-blue-700);
+    padding-top: 4px;
+}
+
+.unlimitedMembersHeader {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.unlimitedMembersContainer {
+    display: grid;
+    grid-template-columns: 48px 1fr;
+}
+
+.unlimitedMembersButton {
+    margin-top: var(--size-medium);
+}
+
 .titleContainer {
     align-items: flex-start;
     display: flex;
@@ -104,7 +132,8 @@
 .annualToggleBox {
     border: 1px solid var(--color-gray-300);
     border-radius: 8px;
-    margin-bottom: 30px;
+    margin-bottom: var(--size-large);
+    margin-top: var(--size-large);
     max-width: 350px;
     padding: 30px;
 }
@@ -127,4 +156,22 @@
 
 .billingIssues {
     font-size: 18px;
+}
+
+.workspaceTabs {
+    > :global(.ant-tabs-nav)::before {
+        border-bottom: 0 !important;
+    }
+
+    :global(.ant-tabs-tab):first-of-type {
+        margin-left: 0 !important;
+    }
+}
+
+.header {
+    margin-bottom: 20px !important;
+}
+
+.contact {
+    display: inline;
 }
