--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -25,6 +25,12 @@
     justify-content: center;
 }
 
+.draggableOverlay {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+}
+
 .button {
     justify-content: center;
 }
