Stack sourcemap buttons on smaller viewports

--- a/frontend/src/pages/Error/components/StackTraceSection/StackTraceSection.module.scss
+++ b/frontend/src/pages/Error/components/StackTraceSection/StackTraceSection.module.scss
@@ -42,6 +42,11 @@
         a {
             margin-right: var(--size-medium);
         }
+
+        @media (max-width: 1350px) {
+            align-items: start;
+            flex-direction: column;
+        }
     }
 }
 
