Make dashboard cards consistent height

--- a/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
+++ b/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
@@ -15,10 +15,10 @@
         background: var(--color-gray-400);
         background-image: none;
         border-radius: var(--size-small);
-        bottom: calc(var(--size-medium)) !important;
+        bottom: var(--size-small) !important;
         height: var(--size-small);
         opacity: 0;
-        right: calc(var(--size-small)) !important;
+        right: var(--size-small) !important;
         transform: unset !important;
         transition: opacity 0.2s ease-in-out;
         width: var(--size-small);
