--- a/frontend/src/pages/Home/components/KeyPerformanceIndicators/KeyPerformanceIndicators.module.scss
+++ b/frontend/src/pages/Home/components/KeyPerformanceIndicators/KeyPerformanceIndicators.module.scss
@@ -1,10 +1,11 @@
 .keyPerformanceIndicatorsContainer {
-    border: 1px solid var(--color-gray-300);
     border-radius: var(--border-radius);
+    border: 1px solid var(--color-gray-300);
     display: flex;
     flex-wrap: wrap;
     gap: var(--size-xxLarge);
+    height: 100%;
     margin-bottom: var(--size-xxLarge);
     padding: var(--size-large);
-    width: fit-content;
+    width: 100%;
 }
