--- a/frontend/src/pages/Home/HomePage.module.scss
+++ b/frontend/src/pages/Home/HomePage.module.scss
@@ -3,7 +3,7 @@
 }
 
 .dashboard {
-    padding: 120px 80px 80px;
+    padding: 0;
 }
 
 .subTitle {
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: var(--size-medium);
+    min-height: 28px;
 
     #h3 {
         margin-bottom: 0 !important;
@@ -22,6 +23,10 @@
 
     :global(.ant-input-affix-wrapper) {
         width: 150px;
+    }
+
+    &.smallMargin {
+        margin-bottom: var(--size-small);
     }
 }
 
