--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -32,8 +32,8 @@
 
 .draggableOverlay {
     position: absolute;
-    top: var(--size-xSmall);
-    right: var(--size-xSmall);
+    top: 18px;
+    right: var(--size-medium);
 }
 
 .button {
