--- a/frontend/src/pages/Home/HomePage.module.scss
+++ b/frontend/src/pages/Home/HomePage.module.scss
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: var(--size-medium);
-    min-height: 28px;
+    height: 15px;
 
     #h3 {
         margin-bottom: 0 !important;
@@ -26,7 +26,7 @@
     }
 
     &.smallMargin {
-        margin-bottom: var(--size-small);
+        margin-bottom: var(--size-medium);
     }
 }
 
