--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -130,7 +130,7 @@
     --color-scrubber-zoom-region-border: #565656;
     --color-scrubber-zoom-region: #56565622;
     --color-scrubber-zoom-handle: #757575;
-    --color-scrubber-scrub-handle: #ca0000;
+    --color-scrubber-scrub-handle: #000;
     --color-scrubber-inactive-region: #f0f0f0a6;
 }
 
