--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -9,26 +9,26 @@
 }
 
 .histogramContainer {
-    margin-bottom: 26px;
+    background-color: var(--color-primary-background);
+    border: 1px solid var(--color-gray-300);
+    padding-bottom: var(--size-xSmall);
+    padding-left: var(--size-medium);
+    padding-right: var(--size-medium);
     position: relative;
     z-index: 300;
 }
 
 .timeMarker {
     background: var(--color-scrubber-scrub-handle);
-    height: 44px;
+    height: 100%;
     position: absolute;
-    top: 10px;
     width: 2px;
-    z-index: 200;
+    z-index: 300;
 }
 
 .innerBounds {
     height: 100%;
-    padding-left: var(--size-medium);
-    padding-right: var(--size-medium);
     position: absolute;
-    width: 100%;
 }
 
 .histogramSkeleton {
