--- a/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
@@ -183,7 +183,7 @@
 .toolbarSection {
     background-color: var(--color-primary-background);
     border: 1px solid var(--color-gray-300);
-    border-radius: var(--border-radius);
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
     display: flex;
     flex-direction: row;
     height: 50px;
