add ability to add/edit prebuilt components

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -36,6 +36,12 @@
     top: 18px;
 }
 
+.overlayButton {
+    position: absolute;
+    right: var(--size-xLarge);
+    top: var(--size-medium);
+}
+
 .button {
     justify-content: center;
 }
