--- a/frontend/src/components/Histogram/Histogram.module.scss
+++ b/frontend/src/components/Histogram/Histogram.module.scss
@@ -8,6 +8,7 @@
     .graphContainer {
         height: 72px;
         margin: 0 auto;
+        padding-top: var(--size-xSmall);
         position: relative;
         width: 100%;
 
