fix: css & naming

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -132,6 +132,10 @@
     --color-scrubber-zoom-handle: #757575;
     --color-scrubber-scrub-handle: #000;
     --color-scrubber-inactive-region: #f0f0f0a6;
+
+    // Events
+    --color-activity-graph-area: #f2f2f2;
+    --color-activity-graph-mask: #808080;
 }
 
 [data-theme='dark'] {
