--- a/frontend/src/components/TimeRangePicker/TimeRangePicker.module.scss
+++ b/frontend/src/components/TimeRangePicker/TimeRangePicker.module.scss
@@ -1,4 +1,4 @@
-$width: 170px;
+$width: 200px;
 $height: 40px;
 
 .container {
@@ -10,13 +10,19 @@ $height: 40px;
     }
 }
 
-.input {
+.label {
     border: 1px solid var(--color-gray-300);
     border-radius: var(--size-xSmall);
     cursor: pointer;
     height: $height;
     padding: var(--size-xSmall) var(--size-small);
     width: 100%;
+}
+
+.input {
+    background: transparent;
+    border: 0;
+    outline: none;
 }
 
 .dateOptionsContainer {
@@ -56,4 +62,12 @@ $height: 40px;
 
 .datepicker {
     width: 100%;
+}
+
+.customDateRange {
+    margin-top: var(--size-large);
+}
+
+.customDateRangeButton {
+    margin-top: var(--size-small);
 }
