--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -131,7 +131,7 @@
     --color-scrubber-zoom-region: #56565622;
     --color-scrubber-zoom-handle: #757575;
     --color-scrubber-scrub-handle: #000;
-    --color-scrubber-inactive-region: #f0f0f0a6;
+    --color-scrubber-inactive-region: #eaeaea;
 
     // Events
     --color-activity-graph-area: #f2f2f2;
