[HIG-2394] turn the home page into a configurable dashboard (#2864)
## Converts the home page into custom dashboard.
/1/home is treated as a dashboard, creating or finding the `Home` dashboard for the current project.
Layout and cards can be updated using the same UI as the dashboard page.
Does not yet allow you to edit / add new prebuilt component cards.
https://www.loom.com/share/2b21560d24cd4f92b8069205e01ab14a

NOTE: This is only visible to Highlight admins for now. Other users see the existing static home page.

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -6,6 +6,11 @@
     }
 }
 
+.componentCard {
+    height: 100%;
+    width: 100%;
+}
+
 .noDataContainer {
     align-items: center;
     display: flex;
@@ -23,6 +28,18 @@
     cursor: move;
     display: flex;
     justify-content: center;
+}
+
+.draggableOverlay {
+    position: absolute;
+    right: var(--size-medium);
+    top: 18px;
+}
+
+.overlayButton {
+    position: absolute;
+    right: var(--size-xLarge);
+    top: var(--size-medium);
 }
 
 .button {
