--- a/frontend/src/pages/Home/components/ActiveUsersTable/ActiveUsersTable.module.scss
+++ b/frontend/src/pages/Home/components/ActiveUsersTable/ActiveUsersTable.module.scss
@@ -9,3 +9,10 @@
         white-space: nowrap;
     }
 }
+
+.timeRow {
+    column-gap: var(--size-xxSmall);
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
