--- a/frontend/src/components/TimeRangePicker/TimeRangePicker.module.scss
+++ b/frontend/src/components/TimeRangePicker/TimeRangePicker.module.scss
@@ -1,5 +1,5 @@
-$width: 200px;
-$height: 40px;
+$container-height: 40px;
+$dropdown-min-width: 200px;
 
 .container {
     position: relative;
@@ -14,9 +14,9 @@ $height: 40px;
     border-radius: var(--size-xSmall);
     cursor: pointer;
     display: flex;
-    height: $height;
+    height: $container-height;
     justify-content: space-between;
-    min-width: $width;
+    min-width: $dropdown-min-width;
     padding: var(--size-xSmall) var(--size-small);
 }
 
@@ -56,7 +56,7 @@ $height: 40px;
 }
 
 .dateOptions {
-    width: $width;
+    width: $dropdown-min-width;
 }
 
 .dateOption {
@@ -79,9 +79,7 @@ $height: 40px;
 
 .datepickerContainer {
     border-right: 1px solid var(--color-gray-300);
-    flex-shrink: 0;
-    // Subtract the 7px of padding that comes on the datepicker.
-    padding: var(--size-large);
+    padding: var(--size-medium);
     width: 350px;
 }
 
