fix: move the context out of the right panel

--- a/frontend/src/pages/Error/ErrorPage.module.scss
+++ b/frontend/src/pages/Error/ErrorPage.module.scss
@@ -86,6 +86,8 @@
 
 .eventText {
     color: var(--color-gray-500);
+    display: flex;
+    gap: var(--size-xSmall);
     margin-bottom: 30px;
 }
 
