--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorCard/ErrorCard.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorCard/ErrorCard.module.scss
@@ -43,7 +43,7 @@
     gap: var(--size-small);
 }
 
-.description {
+.details {
     display: flex;
     gap: var(--size-medium);
     overflow-wrap: anywhere;
