feat(hig-2595): show custom error payloads in the UI (#2901)
* fix: show custom error payload on error objects

* feat: add payload to metadata_log query

* feat: add context section to metadata

* fix: unify names for errors in the ui

* fix: move the context out of the right panel

* fix: spacing

--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorCard/ErrorCard.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorCard/ErrorCard.module.scss
@@ -41,22 +41,26 @@
     align-items: baseline;
     display: flex;
     gap: var(--size-small);
-    margin-bottom: var(--size-xSmall);
 }
 
-.description {
+.details {
+    display: flex;
+    gap: var(--size-medium);
     overflow-wrap: anywhere;
     white-space: break-spaces;
+    p {
+        color: var(--color-gray-500);
+    }
 }
 
 .goToButton {
+    align-self: center;
+    margin-left: auto;
     visibility: hidden;
 }
 
-.actions {
-    display: flex;
-    flex-direction: column;
-    gap: var(--size-xSmall);
+.content {
+    width: 100%;
 }
 
 .currentIndicatorWrapper {
