--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorModal/ErrorModal.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/components/ErrorModal/ErrorModal.module.scss
@@ -4,7 +4,10 @@
     justify-content: flex-end;
 }
 
-.errorDescriptionContainer {
+.errorBodyContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     margin-bottom: 30px;
 }
 
