--- a/frontend/src/components/FullCommentList/FullCommentList.module.scss
+++ b/frontend/src/components/FullCommentList/FullCommentList.module.scss
@@ -65,6 +65,6 @@
     height: 90px;
     margin: var(--size-xxSmall) var(--size-large);
     margin-bottom: var(--size-medium);
-    margin-top: 0;
+    margin-top: var(--size-xSmall);
     width: auto !important;
 }
