--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -173,6 +173,7 @@
     font-size: 16px;
     font-weight: 500;
     overflow: hidden;
+    padding-top: 2px;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
