--- a/frontend/src/components/SearchResultsHistogram/SearchResultsHistogram.module.css
+++ b/frontend/src/components/SearchResultsHistogram/SearchResultsHistogram.module.css
@@ -1,3 +1,8 @@
+.histogramWrapper {
+    height: 62px;
+    margin-top: var(--size-xSmall);
+}
+
 .histogramTooltip {
     display: flex;
     flex-direction: column;
