feat(hig-2612): color code warnings and asserts

--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ConsolePage/ConsolePage.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ConsolePage/ConsolePage.module.scss
@@ -40,6 +40,7 @@
 
 .consoleMessage {
     border-bottom: 1px solid var(--color-gray-300);
+    border-left: var(--size-xxSmall) solid var(--color-console-message);
     display: grid;
     font-size: 12px;
     font-weight: 400;
