--- a/frontend/src/components/LineChart/LineChart.module.scss
+++ b/frontend/src/components/LineChart/LineChart.module.scss
@@ -51,7 +51,8 @@
 	column-gap: var(--size-xSmall);
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
+	margin-bottom: var(--size-medium);
 	width: 100%;
 }
 
